--- a/about.html
+++ b/about.html
@@ -10,8 +10,40 @@
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="banner">
+        <img src="./assets/images/banner.png" alt="Banner">
+    </div>
     <main>
         <!-- About page code here -->
+        <hi>About Us</hi>
+        <h2>Our Locations</h2>
+        <ul>
+            <li>Houston, TX</li>
+            <li>Seattle, WA</li>
+            <li>Tampa, FL</li>
+            <li>Wilmington, WA</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="./assets/images/about.jpg" alt="Spices">
+        <p>
+            It all started in Houston, TX when a computer science student tasted a spoonful of curry for the first time and discovered a love of spices... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, culpa labore, odio quaerat, ullam animi cum enim fuga impedit eos consequatur minima blanditiis necessitatibus corporis ipsum est nesciunt ex quam!
+        </p>
     </main>
 </body>
 </html>
