--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+               <!-- Remember to link to your CSS file! -->
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
     <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id= "Banner">
+        <img src="./assets/images/banner.png" alt="Banner">
+    </div>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -18,9 +38,15 @@
         <p>
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
+        <p>
+            <strong>Closed on major holidays.</strong>
+        </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number:</strong> 234-24234
+        </p>
+        <p>
+            <strong>Address:</strong> 1849 Glendale Dr.<br> Glendale, CA
         </p>
     </main>
 </body>
