--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- TODO: Banner Image here-->
     <main>
         <h1>H-Thai-ML</h1>
-        <h2>We'll format your meal times!</H2>
+        <h2>We'll make sure you enjoy your time!</H2>
         <div class="service">
             <h3>Dine-In</h3>
         </div>
@@ -41,7 +41,7 @@
         <div class="service">
             <h3>Delivery</h3>
         </div>
-        <h2>Come out and join us for a well-structured meal!</h2>
+        <h2>Come out and join us for an amazing meal!</h2>
         <img src="./assets/images/table-in-restaurant.jpg" alt="Table in Restaurant">
         <!-- TODO: Home page code here-->
     </main>
